# cgd-lib

./: CMakeLists.txt  README.md  cgd.h  main.c  qac.bat  testscene.c  testscene.h  util.h  window.c  window.h
libcgd/: array.c  array.h  camera.c  camera.h  environment.c  environment.h  files.c  files.h  input.c  input.h  light.c  light.h  linkedlist.c  linkedlist.h  mesh.c  mesh.h  model.c  model.h  shaderprogram.c  shaderprogram.h  texture.c  texture.h  util.c  util.h  window.c  window.h
libcgd-test/: cameratest.c  cameratest.h  lamptest.c  lamptest.h  shadertest.c  shadertest.h  texturetest.c  texturetest.h  triangletest.c  triangletest.h
qac/: excludes.txt
shader/: multiLightShader.fs  singleLightShader.fs  singleLightShader.vs  superShader.fs  superShader.vs  tex2Shader.fs  texShader.fs
